--- a/avengers.html
+++ b/avengers.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Avengers - Infinity War</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
@@ -14,6 +15,10 @@
           <h1>Avengers</h1>
           <h2>Infinity War</h2>
         </header>
+        <iframe src="https://www.youtube.com/embed/6ZfuNTqbHE8"></iframe>
+        <p class='release-date'>
+          OUT NOW!
+        </p>
       </section>
     </div>
   </body>
